[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pws-examples"
version = "0.1.0"
description = "Runnable, tested Python web scraping examples accompanying python-web-scraping.com"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Python Web Scraping", email = "info@python-web-scraping.com" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "requests>=2.31",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://python-web-scraping.com"
Repository = "https://github.com/python-web-scraping-com/examples"

[tool.setuptools.packages.find]
include = ["pws_examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
